//
// Created by Muxbee on 07-11-16.
//

#ifndef SKILLED_EAGLE_ENUMS_HPP
#define SKILLED_EAGLE_ENUMS_HPP

enum Weapon {pistol};
enum Gamemode {deathmatch};

#endif //SKILLED_EAGLE_ENUMS_HPP
