@startuml

class LCD <<boundery>> {
    +test()
    +push(data)
}
class IrSensor <<boundery>> {
    +get()
}
class IrLed <<boundery>> {
    +send(byte data[2])
}
class Button <<boundery>> {
    +get()
}
class Speaker <<boundery>> {
    +play(sound, duration)
}
class KeyPad <<boundery>> {
    +get()
}

class DisplayController <<controller>> {
    -LCD dysplay
    +setTime(int time)
    +setScore(int scaore)
    +setWapen(int wapen)
    +setPlayerId(int id)
}
class IrReceiver <<controller>> {
    -IrSensor ir
    -RegisterController register
    -GameController game
}
class IrSender <<controller>> {
    -IrLed ir
    +fire(byte data)
    +command(command)
}
class ButtonController <<controller>> {
    -Button btn
    -GameController game
}
class SoundController <<controller>> {
    -Speaker speaker
    +fire()
}
class KeyPadController <<controller>> {
    -KeyPad pad
    -InitController init
}

class PcProxy <<proxy>> {
    -GameController game
}

class GameController <<controller>> {
    -IrSender ir
    -SoundController sound
    -DisplayController display
    -score[]
    -wapen
    -gameMode

    +getWapen()
    +getGameMode()

    +shot(score)
    +disable()
    +enable()
}
class GameTimeController <<controller>> {
    -GameController game
    -DisplayController display
    +start(int time)
    +stop()
}
class InitController <<controller>> {
    -IrSender ir
    -DisplayController display
    +startGame()
    +stopGame()
    +setWapen(wapen)
    +setTimae(int time)
}
class RegisterController <<controller>> {
    -GameTimeController timer
    +startGame(int time)
    +stopGame()

    +setWapen(wapen)
    +setGameMode(mode)
}

enum Wapens <<entity>>
enum GameModes <<entity>>

DisplayController -> LCD
'IrSensor <-- IrReceiver
'IrLed <-- IrSender
'Button <- ButtonController
Speaker <-- SoundController
KeyPad <-- KeyPadController

IrReceiver --> RegisterController
RegisterController --|> GameController

RegisterController --> GameTimeController
GameTimeController --> GameController
GameTimeController --> DisplayController
GameController -> DisplayController

IrSender <-- GameController
'InitController -> IrSender
KeyPadController --> InitController

ButtonController -> GameController
SoundController <-- GameController

GameController --> Wapens
GameController --> GameModes
GameController <-- PcProxy

''init => display
IrLed <- IrSender
DisplayController <-- InitController
InitController --> IrSender
IrSensor <- IrReceiver
Button <-- ButtonController

@enduml